refactor: 특정 파트 멤버 반환 코드 toList 활용