@@ -4,7 +4,6 @@ import cotato.cotatomanage.domain.Part;
 import cotato.cotatomanage.domain.entity.Member;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Repository;
@@ -31,6 +30,6 @@ public class MemoryMemberRepository implements MemberRepository {
     public List<Member> findByPart(Part part) {
         return repository.stream()
                 .filter(m -> m.getPart() == part)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
